# bertini_real

./: .gitignore  .gitmodules  AUTHORS  COPYING  ChangeLog  Makefile.am  README.md  bertini_real.sublime-project  bertini_real_license.txt  configure.ac  programStartup.h
documentation/: README  README.md  bertini_real.doxy.config  mainpage.dox
documentation/flowcharts/: surface_sampler_fixed.eps  surface_sampler_fixed.puml
grasshopper/BertiniReal/: BertiniReal.sln  BertiniRealComponent.cs  BertiniRealInfo.cs
grasshopper/MyPlugin/: MyPlugin.csproj  MyPlugin.sln  MyPluginInfo.cs
include/: Curve_NotSelfConj.h  Curve_SelfConj.h  bertini_extensions.hpp  bertini_headers.hpp  bertini_real.h  bertini_real.hpp  checkSelfConjugate.h  checkSelfConjugate.hpp  curve.h  curve.hpp  curveNotSelfConj.h  curveNotSelfConj.hpp  curveSelfConj.h  curveSelfConj.hpp  dataToSet.hpp  data_type.h  data_type.hpp  decomposition.hpp  derivative_systems.hpp  determinant_derivative.h  determinant_derivative.hpp  detjactodetjacSolver.h  double_odometer.hpp  edge.hpp  fileops.h  fileops.hpp  forward_declarations.hpp  isosingular.h  isosingular.hpp  limbo.hpp  linprodtodetjacSolver.h  lintolinSolver.h  memory.h  missing_bertini_headers.h  missing_bertini_headers.hpp  multilintolinSolver.h  nid.hpp  nullspace.h  nullspace.hpp  nullspace_left.h  (+32 more)
include/bertini1/: bertini_extensions.hpp  bertini_headers.hpp
include/cells/: cell.hpp  edge.hpp  face.hpp  vertex.hpp
include/containers/: holders.hpp  vertex_set.hpp
include/decompositions/: checkSelfConjugate.hpp  curve.hpp  decomposition.hpp  surface.hpp
include/io/: color.hpp  fileops.hpp  partitionParse.h
include/nag/: nid.hpp  system_randomizer.hpp  witness_set.hpp
include/symbolics/: derivative_systems.hpp  isosingular.hpp  nullspace.hpp  slicing.hpp  sphere_intersection.hpp
m4/: ax_boost_base.m4  ax_boost_chrono.m4  ax_boost_regex.m4  ax_boost_system.m4  ax_boost_timer.m4  ax_cxx_compile_stdcxx_14.m4
manual/: .gitignore  additional_reference_mats.tex  bertini_real_manual.tex  br_glossary.tex  br_manual_header.tex  br_refs.bib  examples.tex  input_files.tex  install.tex  install_linux.tex  install_osx.tex  install_windows.tex  introduction.tex  output_files.tex  quick_summary.tex  running_bertini.tex  running_bertini_real.tex  running_sampler.tex  the_algorithm.tex  troubleshooting.tex  visualization.tex
manual/inputs/: C.curve
matlab_codes/: barplot.m  create_axes_br.m  crit_no_subst.m  curve_pipe_surface.m  curve_plot.m  deflate_no_subst.m  dehomogenize.m  extract_noncritical_fv.m  extract_nonsingular_fv.m  faces_noncritically_connected.m  faces_nonsingularly_connected.m  faces_with_midpoint.m  frame.m  frenet.m  fv2stl.m  fv_to_stl.m  gather_br_samples.m  gather_midpath_solns.m  generate_evaluable_jacobian.m  get_generic_solns.m  get_path_linprod.m  get_types.m  get_user_indices.m  getmondim.m  increment_name.m  info2fv.m  info2stl.m  label_axes.m  leap_figure_axes_control.m  min_recursive.m  path_sanity_check.m  pipe_surface.m  plot_br_samples.m  plot_cond_hist.m  plot_paths.m  plot_projection.m  plot_sampler_data.m  plot_surface_samples.m  plot_vertices.m  read_random_matrix.m  (+11 more)
matlab_codes/@bertini_real_plotter/: adjust_axes.m  bertini_real_plotter.m  button_setup.m  camera_setup.m  change_alpha.m  change_edge_alpha.m  change_edge_width.m  change_line_width.m  create_axes.m  curve_plot.m  edge_touches_faces.m  get_indices.m  initialize_handles_surface.m  label_axes.m  load_data.m  plot_curve_samples.m  plot_edge_points.m  plot_faces.m  plot_surface_edges.m  plot_surface_samples.m  plot_vertices.m  preprocess_data.m  project_through_pi.m  render_into_file.m  resizeui.m  save_routine.m  set_default_options.m  set_initial_visibility.m  set_options.m  setupfig.m  sphere_plot.m  surface_plot.m  twiddle_visibility.m  visibility_setup.m
matlab_codes/deprecated/: adjust_axes_br.m  br_trig.m  get_indices.m  get_path_solver.m  label_axes.m  make_discrete_colorbar.m  max_recursive.m  plot_br_samples.m  plot_paths.m  plot_projection.m  plot_sampler_data.m  plot_vertices.m  scene_manipulator.m  set_font.m  sphere_plot.m  surface_plot.m
python/: ToDo.txt  setup.py  vis2.py
python/bertini_real/: BRdata.py  Curve.py  Decomposition.py  Dehomogenize.py  Gather.py  GatherAndPlot.py  ParsingFunctions.py  Plot.py  Plotter.py  Surface.py  Util.py  __about__.py  (+3 more)
src/: Curve_NotSelfConj.c  Makefile  Makemodule.am  bertini_extensions.cpp  bertini_real.c  bertini_real.cpp  checkSelfConjugate.c  checkSelfConjugate.cpp  curve.c  curve.cpp  curveNotSelfConj.c  curveNotSelfConj.cpp  curveSelfConj.c  curveSelfConj.cpp  dataToSet.cpp  data_type.c  data_type.cpp  derivative_systems.cpp  determinant_derivative.c  determinant_derivative.cpp  detjactodetjacSolver.c  fileops.c  fileops.cpp  isosingular.c  isosingular.cpp  linprodtodetjacSolver.c  lintolinSolver.c  memory.c  multilintolinSolver.c  nullspace.cpp  nullspace_left.c  nullspace_left.cpp  output.c  output.cpp  parallelism.cpp  partitionParse.l  postProcessing.c  postProcessing.cpp  programConfiguration.c  programConfiguration.cpp  (+22 more)
test/: .gitignore
(+385 files in other folders)
